<resources>
    <string name="app_name">SavePassword</string>
    <string name="accounts">Cuentas</string>
    <string name="favorites">Favoritas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="screen_new_account_title">Nueva Cuenta</string>
    <string name="screen_edit_account_title">Editar Cuenta</string>
    <string name="screen_detail_title">Detalle</string>
    <string name="account">Cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="website">Sitio web</string>
    <string name="notes">Notas</string>
    <string name="last_update">Última actualización</string>

    <string name="error_message_enter_title">Ingresa un titulo</string>
    <string name="error_message_enter_username">Ingresa un nombre de usuario o correo electrónico</string>
    <string name="error_message_enter_password">Ingresa una contraseña</string>

    <string name="item_edit">Editar</string>
    <string name="item_share">Compartir</string>
    <string name="item_favorite">Favorito</string>
    <string name="item_delete">Eliminar</string>

    <!--empty list messages-->
    <string name="empty_list_message">No hay elementos para mostrar</string>
    <string name="copied_clipboard">Copiado al portapapeles</string>

    <string name="question_delete">¿Eliminar cuenta?</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="search">Buscar</string>

    <string name="new_password">Nueva contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="save">Guardar</string>
    <string name="title_new_password">Ingresa una contraseña de 4 dígitos para acceder a SavePassword</string>

    <!--numbers-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

</resources>