<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.login.LoginActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/default_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonNumberOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonPassword"
                android:text="@string/one" />

            <Button
                android:id="@+id/buttonNumberTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonPassword"
                android:text="@string/two"/>

            <Button
                android:id="@+id/buttonNumberThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonPassword"
                android:text="@string/three"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonNumberFour"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four"/>

            <Button
                android:id="@+id/buttonNumberFive"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five"/>

            <Button
                android:id="@+id/buttonNumberSix"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonNumberSeven"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/buttonNumberEight"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight"/>

            <Button
                android:id="@+id/buttonNumberNine"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine"/>


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/buttonNumberZero"
                style="@style/ButtonPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"/>

        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>